Fix: add a subpath for users in rest api url
